@@ -15,6 +15,7 @@ import javax.annotation.Nonnull;
 import io.kubernetes.client.common.KubernetesObject;
 import io.kubernetes.client.openapi.models.V1Affinity;
 import io.kubernetes.client.openapi.models.V1Container;
+import io.kubernetes.client.openapi.models.V1ContainerPort;
 import io.kubernetes.client.openapi.models.V1EmptyDirVolumeSource;
 import io.kubernetes.client.openapi.models.V1EnvVar;
 import io.kubernetes.client.openapi.models.V1LabelSelector;
@@ -1063,12 +1064,12 @@ class ManagedPodHelperTest extends PodHelperTestBase {
   void whenClusterHasRestartPolicy_createPodWithIt() {
     getConfigurator()
         .configureCluster(CLUSTER_NAME)
-        .withRestartPolicy("Always");
+        .withRestartPolicy(V1PodSpec.RestartPolicyEnum.ALWAYS);
     testSupport.addToPacket(ProcessingConstants.CLUSTER_NAME, CLUSTER_NAME);
 
     assertThat(
         getCreatedPod().getSpec().getRestartPolicy(),
-        is("Always"));
+        is(V1PodSpec.RestartPolicyEnum.ALWAYS));
   }
 
   @Test
@@ -1113,8 +1114,10 @@ class ManagedPodHelperTest extends PodHelperTestBase {
   @Test
   void whenDomainAndClusterHaveLegacyAuxImages_createManagedPodsWithInitContainersInCorrectOrderAndVolumeMounts() {
     Map<String, Object> auxiliaryImageVolume = createAuxiliaryImageVolume(DEFAULT_LEGACY_AUXILIARY_IMAGE_MOUNT_PATH);
-    Map<String, Object> auxiliaryImage = createAuxiliaryImage("wdt-image:v1", "IfNotPresent");
-    Map<String, Object> auxiliaryImage2 = createAuxiliaryImage("wdt-image:v2", "IfNotPresent");
+    Map<String, Object> auxiliaryImage =
+        createAuxiliaryImage("wdt-image:v1", V1Container.ImagePullPolicyEnum.IFNOTPRESENT);
+    Map<String, Object> auxiliaryImage2 =
+        createAuxiliaryImage("wdt-image:v2", V1Container.ImagePullPolicyEnum.IFNOTPRESENT);
 
     convertDomainWithLegacyAuxImages(
             createLegacyDomainMap(
@@ -1124,12 +1127,14 @@ class ManagedPodHelperTest extends PodHelperTestBase {
     testSupport.addToPacket(ProcessingConstants.CLUSTER_NAME, CLUSTER_NAME);
 
     assertThat(getCreatedPodSpecInitContainers(),
-            allOf(Matchers.hasLegacyAuxiliaryImageInitContainer(AUXILIARY_IMAGE_INIT_CONTAINER_NAME_PREFIX + 1,
-                    "wdt-image:v1",
-                    "IfNotPresent", AUXILIARY_IMAGE_DEFAULT_INIT_CONTAINER_COMMAND, SERVER_NAME),
-                    Matchers.hasLegacyAuxiliaryImageInitContainer(AUXILIARY_IMAGE_INIT_CONTAINER_NAME_PREFIX + 2,
-                            "wdt-image:v2",
-                            "IfNotPresent", AUXILIARY_IMAGE_DEFAULT_INIT_CONTAINER_COMMAND, SERVER_NAME)));
+        allOf(Matchers.hasLegacyAuxiliaryImageInitContainer(AUXILIARY_IMAGE_INIT_CONTAINER_NAME_PREFIX + 1,
+                "wdt-image:v1",
+                V1Container.ImagePullPolicyEnum.IFNOTPRESENT,
+                AUXILIARY_IMAGE_DEFAULT_INIT_CONTAINER_COMMAND, SERVER_NAME),
+            Matchers.hasLegacyAuxiliaryImageInitContainer(AUXILIARY_IMAGE_INIT_CONTAINER_NAME_PREFIX + 2,
+                "wdt-image:v2",
+                V1Container.ImagePullPolicyEnum.IFNOTPRESENT,
+                AUXILIARY_IMAGE_DEFAULT_INIT_CONTAINER_COMMAND, SERVER_NAME)));
     assertThat(getCreatedPod().getSpec().getVolumes(),
             hasItem(new V1Volume().name(getLegacyAuxiliaryImageVolumeName()).emptyDir(
                     new V1EmptyDirVolumeSource())));
@@ -1141,13 +1146,14 @@ class ManagedPodHelperTest extends PodHelperTestBase {
   @Test
   void whenClusterHasLegacyAuxiliaryImageAndVolumeHasMountPath_volumeMountsCreatedWithSpecifiedMountPath() {
     Map<String, Object> auxiliaryImageVolume = createAuxiliaryImageVolume(TEST_VOLUME_NAME, CUSTOM_MOUNT_PATH2);
-    Map<String, Object> auxiliaryImage = createAuxiliaryImage("wdt-image:v1", "IfNotPresent");
+    Map<String, Object> auxiliaryImage =
+        createAuxiliaryImage("wdt-image:v1", V1Container.ImagePullPolicyEnum.IFNOTPRESENT);
 
     convertDomainWithLegacyAuxImages(
             createLegacyDomainMap(
                     createDomainSpecMap(
                             Collections.singletonList(auxiliaryImageVolume),
-                            Arrays.asList(auxiliaryImage))));
+                        List.of(auxiliaryImage))));
     assertThat(getCreatedPodSpecContainers().get(0).getVolumeMounts(),
             hasItem(new V1VolumeMount().name(getLegacyAuxiliaryImageVolumeName()).mountPath(CUSTOM_MOUNT_PATH2)));
   }
@@ -1155,8 +1161,10 @@ class ManagedPodHelperTest extends PodHelperTestBase {
   @Test
   void whenDomainAndManagedServersHaveLegacyAuxImages_createManagedPodsWithInitContainersInCorrectOrderAndMounts() {
     Map<String, Object> auxiliaryImageVolume = createAuxiliaryImageVolume(DEFAULT_LEGACY_AUXILIARY_IMAGE_MOUNT_PATH);
-    Map<String, Object> auxiliaryImage = createAuxiliaryImage("wdt-image:v1", "IfNotPresent");
-    Map<String, Object> auxiliaryImage2 = createAuxiliaryImage("wdt-image:v2", "IfNotPresent");
+    Map<String, Object> auxiliaryImage =
+        createAuxiliaryImage("wdt-image:v1", V1Container.ImagePullPolicyEnum.IFNOTPRESENT);
+    Map<String, Object> auxiliaryImage2 =
+        createAuxiliaryImage("wdt-image:v2", V1Container.ImagePullPolicyEnum.IFNOTPRESENT);
 
     convertDomainWithLegacyAuxImages(
             createLegacyDomainMap(
@@ -1169,10 +1177,12 @@ class ManagedPodHelperTest extends PodHelperTestBase {
     assertThat(getCreatedPodSpecInitContainers(),
             allOf(Matchers.hasLegacyAuxiliaryImageInitContainer(AUXILIARY_IMAGE_INIT_CONTAINER_NAME_PREFIX + 1,
                     "wdt-image:v1",
-                    "IfNotPresent", AUXILIARY_IMAGE_DEFAULT_INIT_CONTAINER_COMMAND, SERVER_NAME),
+                    V1Container.ImagePullPolicyEnum.IFNOTPRESENT,
+                    AUXILIARY_IMAGE_DEFAULT_INIT_CONTAINER_COMMAND, SERVER_NAME),
                     Matchers.hasLegacyAuxiliaryImageInitContainer(AUXILIARY_IMAGE_INIT_CONTAINER_NAME_PREFIX + 2,
                             "wdt-image:v2",
-                            "IfNotPresent", AUXILIARY_IMAGE_DEFAULT_INIT_CONTAINER_COMMAND, SERVER_NAME)));
+                            V1Container.ImagePullPolicyEnum.IFNOTPRESENT,
+                        AUXILIARY_IMAGE_DEFAULT_INIT_CONTAINER_COMMAND, SERVER_NAME)));
     assertThat(getCreatedPod().getSpec().getVolumes(),
             hasItem(new V1Volume().name(getLegacyAuxiliaryImageVolumeName()).emptyDir(
                     new V1EmptyDirVolumeSource())));
@@ -1189,9 +1199,9 @@ class ManagedPodHelperTest extends PodHelperTestBase {
 
     assertThat(getCreatedPodSpecInitContainers(),
             allOf(Matchers.hasAuxiliaryImageInitContainer(AUXILIARY_IMAGE_INIT_CONTAINER_NAME_PREFIX + 1,
-                "wdt-image:v1", "IfNotPresent"),
+                "wdt-image:v1", V1Container.ImagePullPolicyEnum.IFNOTPRESENT),
                 Matchers.hasAuxiliaryImageInitContainer(AUXILIARY_IMAGE_INIT_CONTAINER_NAME_PREFIX + 2,
-                        "wdt-image:v2", "IfNotPresent")));
+                        "wdt-image:v2", V1Container.ImagePullPolicyEnum.IFNOTPRESENT)));
     assertThat(getCreatedPod().getSpec().getVolumes(),
             hasItem(new V1Volume().name(AUXILIARY_IMAGE_INTERNAL_VOLUME_NAME).emptyDir(
                     new V1EmptyDirVolumeSource())));
@@ -1378,10 +1388,11 @@ class ManagedPodHelperTest extends PodHelperTestBase {
     assertThat(v1Container.getPorts().stream()
         .filter(p -> p.getName().endsWith(SIP_CLEAR)).count(), equalTo(2L));
     assertThat(v1Container.getPorts().stream()
-        .filter(p -> p.getName().equals(SIP_CLEAR)).findFirst().orElseThrow().getProtocol(), equalTo("TCP"));
+        .filter(p -> p.getName().equals(SIP_CLEAR)).findFirst().orElseThrow().getProtocol(),
+        equalTo(V1ContainerPort.ProtocolEnum.TCP));
     assertThat(v1Container.getPorts().stream()
         .filter(p -> p.getName().equals("udp-" + SIP_CLEAR))
-        .findFirst().orElseThrow().getProtocol(), equalTo("UDP"));
+        .findFirst().orElseThrow().getProtocol(), equalTo(V1ContainerPort.ProtocolEnum.UDP));
   }
 
   void addSipPorts() {
@@ -1398,10 +1409,11 @@ class ManagedPodHelperTest extends PodHelperTestBase {
     assertThat(v1Container.getPorts().stream()
         .filter(p -> p.getName().endsWith(SIP_SECURE)).count(), equalTo(2L));
     assertThat(v1Container.getPorts().stream()
-        .filter(p -> p.getName().equals(SIP_SECURE)).findFirst().orElseThrow().getProtocol(), equalTo("TCP"));
+        .filter(p -> p.getName().equals(SIP_SECURE)).findFirst().orElseThrow().getProtocol(),
+        equalTo(V1ContainerPort.ProtocolEnum.TCP));
     assertThat(v1Container.getPorts().stream()
         .filter(p -> p.getName().equals("udp-" + SIP_SECURE))
-        .findFirst().orElseThrow().getProtocol(), equalTo("UDP"));
+        .findFirst().orElseThrow().getProtocol(), equalTo(V1ContainerPort.ProtocolEnum.UDP));
   }
 
   @SuppressWarnings("unused")
